--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                     </div>
 
-                    <div class="main__right"> <img src="images/sneak.png"> </div>
+                    <div class="main__right"> <img src="images/akumaz.gif"> </div>
 
                 </div>
             </div>
