--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         
                         <div class="form-row-text">
                             <div class="form-text">                        
-                                <p> AKUMAZ are a collection of 1,222 1/1 unique generative side-profile characters, who survived the world-ending apocalypse. AKUMAZ are a visual guide to embracing your existence. Our vision is to set AKUMAZ as a metaphor for a new form of story-telling, made possible by computational technologies. </p>
+                                <p> We rise, we fall, but we never surrender. Created in the wake of despair, AKUMAZ is an experience of hope, a celebration of perseverance and resilience. </p>
                                 <br>
                                 
                             </div>
