--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                         <p class="form-text2"> TOTAL MINTED </p> 
                         <p class="number" id="tokens_available"> CONNECT </p> 
-                        <p class="form-text" id="phase"> AKUMAZ IS HERE! </p> 
+                        <p class="form-text" id="phase"> AKUMAZ ARE HERE! </p> 
                         <p class="form-text" id="price"> WHITELIST MINT PHASE </p> <br>
                         
                         <div class="form-wl-check">
