--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> AKUMAZ </title>
-    <meta name="description" content= "AKUMAZ IS HERE!">
+    <meta name="description" content= "AKUMAZ ARE HERE!">
     <meta property="og:image" content="/img/other_tag.jpg">
     <link rel="stylesheet" href="css/css-style.css">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
@@ -63,7 +63,7 @@
                         
                         <div class="form-row-text">
                             <div class="form-text">                        
-                                <p> AKUMAZ are a collection of 1,222 1/1 unique generative side-profile characters, who survived the world-ending apocalypse. AKUMAZ are a visual guide to embracing your existence. Our vision is to set AKUMAZ as a metaphor for a new form of story-telling, made possible by computational technologies. </p>
+                                <p> We rise, we fall, but we never surrender. Created in the wake of despair, AKUMAZ is an experience of hope, a celebration of perseverance and resilience. </p>
                                 <br>
                                 
                             </div>
