--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </div>
 
                     <div class="header__center">
-                        <a href="https://etherscan.io/address/0x596c6558e4BB6C87456734E316D75ac138a0A2F4" target="_blank" class="head-etherscan"></a>
-                        <a href="https://opensea.io/collection/akumaz" target="_blank" class="head-opensea"></a>
+                        <a href="https://etherscan.io/address/0xbc684937d4d18f24f956adbaf24b9c054bb3266a" target="_blank" class="head-etherscan"></a>
+                        <a href="https://opensea.io/collection/akumaz-official" target="_blank" class="head-opensea"></a>
                         <a href="https://twitter.com/AKUMAZ_NFT" target="_blank" class="head-twitter"></a>
                     </div>
 
